<resources>
    <string name="app_name">Mike\'sKotlinCalculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="kali">*</string>
    <string name="bagi">/</string>
    <string name="sama_dengan">=</string>
    <string name="clear">CLEAR</string>
</resources>
