<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <TextView
            android:id="@+id/txtHasil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            android:clickable="true"
            android:textSize="75sp"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:hint="@string/btn_0"
            android:focusable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/btn_1"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/btn_2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_1"
            android:layout_alignBottom="@+id/btn_1"
            android:layout_toEndOf="@+id/btn_1"
            android:layout_toRightOf="@+id/btn_1"
            android:text="@string/btn_2"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_2"
            android:layout_alignBottom="@+id/btn_2"
            android:layout_toEndOf="@+id/btn_2"
            android:layout_toRightOf="@+id/btn_2"
            android:text="@string/btn_3"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_4"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_1"
            android:layout_alignStart="@+id/btn_1"
            android:layout_below="@+id/btn_1"
            android:text="@string/btn_4"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_2"
            android:layout_toEndOf="@+id/btn_4"
            android:layout_toRightOf="@+id/btn_4"
            android:text="@string/btn_5"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_5"
            android:layout_alignBottom="@+id/btn_5"
            android:layout_toEndOf="@+id/btn_5"
            android:layout_toRightOf="@+id/btn_5"
            android:text="@string/btn_6"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_7"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_4"
            android:layout_alignStart="@+id/btn_4"
            android:layout_below="@+id/btn_4"
            android:text="@string/btn_7"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_5"
            android:layout_toEndOf="@+id/btn_7"
            android:layout_toRightOf="@+id/btn_7"
            android:text="@string/btn_8"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_6"
            android:layout_toEndOf="@+id/btn_5"
            android:layout_toRightOf="@+id/btn_5"
            android:text="@string/btn_9"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_0"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_8"
            android:layout_toEndOf="@+id/btn_7"
            android:layout_toRightOf="@+id/btn_7"
            android:text="@string/btn_0"
            android:textColor="@android:color/background_light"
            android:background="@drawable/btn_rounded_angka"
            android:padding="10sp"
            android:textSize="50sp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_Add"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_above="@id/btn_6"
            android:background="@drawable/btn_rounded_op"
            android:text="@string/tambah"
            android:textColor="@android:color/background_light"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_Sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_Add"
            android:layout_alignStart="@+id/btn_Add"
            android:layout_below="@+id/btn_Add"
            android:background="@drawable/btn_rounded_op"
            android:text="@string/kurang"
            android:textColor="@android:color/background_light"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_Mul"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_Sub"
            android:layout_alignStart="@+id/btn_Sub"
            android:layout_below="@+id/btn_6"
            android:background="@drawable/btn_rounded_op"
            android:text="@string/kali"
            android:textColor="@android:color/background_light"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_Div"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_Mul"
            android:layout_alignStart="@+id/btn_Mul"
            android:layout_below="@+id/btn_9"
            android:background="@drawable/btn_rounded_op"
            android:text="@string/bagi"
            android:textColor="@android:color/background_light"
            android:padding="10sp"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_calc"
            android:layout_marginTop="15dp"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_below="@+id/btn_0"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/sama_dengan"
            android:background="@drawable/btn_rounded_calc"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_marginTop="15dp"
            android:layout_width="175dp"
            android:layout_height="75dp"
            android:layout_below="@+id/btn_Div"
            android:text="@string/clear"
            android:background="@drawable/btn_rounded_reset"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>


</LinearLayout>